# omp

lab12/: main.c
lab7/: CMakeLists.txt  a.out  seven2.c
lab8/: CMakeLists.txt
